--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.5.1
   hooks_riverpod: ^2.5.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
